// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps 渲染垂直 Steps 1`] = `
<div
  className="algae-ui-steps algae-ui-steps-vertical"
>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-success algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <svg
            className="algae-ui-icon"
            style={Object {}}
          >
            <use
              xlinkHref="#check-circle"
            />
          </svg>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          success step
        </div>
        <p
          className="algae-ui-step-description"
        >
          This is a description
        </p>
      </div>
    </div>
  </div>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-process algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <span
            className="algae-ui-step-icon"
          >
            2
          </span>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          process step
          <span
            className="algae-ui-step-subTitle"
          >
            This is subTitle
          </span>
        </div>
        <p
          className="algae-ui-step-description"
        />
      </div>
    </div>
  </div>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-waiting algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <span
            className="algae-ui-step-icon"
          >
            3
          </span>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          process step
          <span
            className="algae-ui-step-subTitle"
          >
            This is subTitle
          </span>
        </div>
        <p
          className="algae-ui-step-description"
        />
      </div>
    </div>
  </div>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-waiting algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <span
            className="algae-ui-step-icon"
          >
            4
          </span>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          waiting step
          <span
            className="algae-ui-step-subTitle"
          >
            This is subTitle
          </span>
        </div>
        <p
          className="algae-ui-step-description"
        />
      </div>
    </div>
  </div>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-fail algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <svg
            className="algae-ui-icon"
            style={Object {}}
          >
            <use
              xlinkHref="#close-circle"
            />
          </svg>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          fail step
        </div>
        <p
          className="algae-ui-step-description"
        >
          This is a description
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps 渲染普通 Steps 1`] = `
<div
  className="algae-ui-steps algae-ui-steps-horizontal"
>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-success algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <svg
            className="algae-ui-icon"
            style={Object {}}
          >
            <use
              xlinkHref="#check-circle"
            />
          </svg>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          success step
        </div>
        <p
          className="algae-ui-step-description"
        >
          This is a description
        </p>
      </div>
    </div>
  </div>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-success algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <svg
            className="algae-ui-icon"
            style={Object {}}
          >
            <use
              xlinkHref="#check-circle"
            />
          </svg>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          process step
          <span
            className="algae-ui-step-subTitle"
          >
            This is subTitle
          </span>
        </div>
        <p
          className="algae-ui-step-description"
        />
      </div>
    </div>
  </div>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-waiting algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <span
            className="algae-ui-step-icon"
          >
            3
          </span>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          waiting step
        </div>
        <p
          className="algae-ui-step-description"
        >
          This is a description
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps 渲染自定义图标的 Steps 1`] = `
<div
  className="algae-ui-steps algae-ui-steps-horizontal"
>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-success algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <svg
            className="algae-ui-icon"
            style={Object {}}
          >
            <use
              xlinkHref="#edit"
            />
          </svg>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          edit
        </div>
        <p
          className="algae-ui-step-description"
        />
      </div>
    </div>
  </div>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-process algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <svg
            className="algae-ui-icon"
            style={Object {}}
          >
            <use
              xlinkHref="#form"
            />
          </svg>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          form
        </div>
        <p
          className="algae-ui-step-description"
        />
      </div>
    </div>
  </div>
  <div
    className="algae-ui-step-wrapper"
  >
    <div
      className="algae-ui-step algae-ui-step-waiting algae-ui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="algae-ui-step-icon-wrapper"
      >
        <div
          className="algae-ui-step-icon-content"
        >
          <svg
            className="algae-ui-icon"
            style={Object {}}
          >
            <use
              xlinkHref="#delete"
            />
          </svg>
        </div>
      </div>
      <div
        className="algae-ui-step-content"
      >
        <div
          className="algae-ui-step-title"
        >
          delete
        </div>
        <p
          className="algae-ui-step-description"
        />
      </div>
    </div>
  </div>
</div>
`;
